# geodata

./: .gitattributes  .gitignore  .mailmap  .pylintrc  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  create_cutout_2.py  create_wind.ipynb  create_wind.py  cutout_explanation.md  cutout_test.ipynb  debug.py  environment.yaml  get_data.ipynb  get_data.py  issues.md  issues.tex.md  manipulate_cmd.py  pyproject.toml  reanalysis_variables.md  run_python.sh  setup.py  wind_corrections.ipynb
.github/workflows/: dev_test.yml  lint.yml  master_test.yml  pr_test.yml  pylint.yaml  test.yml
atlite/: __init__.py  config.py  convert.py  cutout.py  dataset.py  preparation.py  wind.py
atlite/datasets/: __init__.py  era5.py  merra2.py
dev_tests/: test_era5.py  test_merra2.py
doc/: Introduction.md  era5_setup.md  merra2.ipynb  merra2_configs_and_outputs.md  merra2_createcutout.md  merra2_download.md  merra2_generatingoutputs.md  merra2_output_wind.md  merra2_setup.md  merra_test2.ipynb  packagesetup.md  tableofcontents.md
doc/era5/: era5_download.md  era5_example_output.md  era5_outputs.md  era5_setup.md
doc/general/: Introduction.md  input_output.md  packagesetup.md  tableofcontents.md
doc/jupyter_notebooks/: era5.ipynb  mask.ipynb  merra2.ipynb
doc/mask/: mask_creation_workflow.md  mask_example_workflow.md  mask_on_cutout_workflow.md  mask_troubleshoot.md  mask_workflow.md
doc/merra2/: merra2_configs_and_outputs.md  merra2_createcutout.md  merra2_download.md  merra2_example_output.md  merra2_output_solar.md  merra2_output_wind.md  merra2_outputs.md  merra2_setup.md
doc/modeling/wind/: merra2.md
doc/parameterizations/: wind_parameterizations.md  wind_parameterizations.tex.md
doc/visualization/: visualization.md
docs/source/: conf.py  index.rst  intro.rst
docs/source/api_reference/: convert.rst  cutout.rst  dataset.rst  mask.rst  plot.rst
docs/source/application/: wind_estimation.ipynb
docs/source/datasets/: weather_data_config.md
docs/source/example_notebooks/: mask_creation_workflow.ipynb  merra2.ipynb
docs/source/general/: input_output.md
docs/source/mask/: mask_creation_workflow.ipynb  mask_creation_workflow.md  mask_on_cutout.ipynb  mask_troubleshoot.md
docs/source/merra2/: merra2_download2.md  merra2_outputs.md  merra2_setup.md
docs/source/parameterizations/: wind_parameterizations.md
docs/source/quick_start/: input_output.md  packagesetup.md
docs/source/visualization/: visualization.ipynb
example_notebooks/: era5.ipynb  era5_pv_data.csv  era5_wind_data.csv  era5_windspd_data.csv  mask_creation_workflow.ipynb  mask_on_cutout.ipynb  merra2.ipynb  merra2_wind_data.csv  merra2_windspd_data.csv  merra2_windwpd_data.csv  visualization.ipynb
example_notebooks/data/: china_elevation.tif
geodata/: __init__.py  _version.py  aggregate.py  config-default.py  config.py  convert.py  cutout.py  dataset.py  gis.py  hydro.py  mask.py  plot.py  preparation.py  resource.py  utils.py  wind.py
geodata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geodata/datasets/: __init__.py  cordex.py  era5.py  merra2.py  modis.py  ncep.py  sarah.py
geodata/pv/: irradiation.py  orientation.py  solar_panel_model.py  solar_position.py
sample_data/: china_modis.tif  china_slope.tif
sample_data/shapefiles/0/: WDPA_WDOECM_Nov2021_Public_CHN_shp-points.shp  WDPA_WDOECM_Nov2021_Public_CHN_shp-polygons.dbf
sample_data/shapefiles/1/: WDPA_WDOECM_Nov2021_Public_CHN_shp-points.shp  WDPA_WDOECM_Nov2021_Public_CHN_shp-points.shx
sample_data/shapefiles/2/: WDPA_WDOECM_Nov2021_Public_CHN_shp-points.dbf  WDPA_WDOECM_Nov2021_Public_CHN_shp-polygons.shx
scripts/: download.py
src/geodata/: __init__.py  _convert.py  _cutout.py  _dataset.py  _logging.py  _preparation.py  _utils.py  _version.py  _wind.py  config.py  convert.py  cutout.py  dataset.py  logging.py  mask.py  model.py  plot.py  preparation.py  pvlib.py  resource.py  types.py  utils.py  wind.py  wind_new.py
src/geodata/_datasets/: era5.py  merra2.py
src/geodata/datasets/: __init__.py  _base.py  era5.py  merra2.py
src/geodata/model/: __init__.py  _base.py  base.py  wind.py
src/geodata/pv/: irradiation.py  orientation.py  solar_panel_model.py  solar_position.py
tests/: cutout module update.ipynb  demo_era5_test.ipynb  demo_merra2_surface_flux_dailymeans_test.ipynb  demo_merra2_surface_flux_monthly_test.ipynb  era5.ipynb  era5_pv_data.csv  era5_test.ipynb  era5_wind_data.csv  era5_windspd_data.csv  mask_creation_workflow.ipynb  mask_module.ipynb  mask_on_cutout_test.ipynb  mask_test.ipynb  merra2.ipynb  merra2_aerosol_hourly_test(_bug2.ipynb  merra2_aerosol_hourly_test.ipynb  merra2_aerosol_hourly_test_bug.ipynb  merra2_daily_test.ipynb  merra2_hourly_test.ipynb  merra2_monthly_test.ipynb  merra2_monthlytest.ipynb  merra2_slv_radiation_hourly_test.ipynb  merra2_slv_radiation_monthly_test.ipynb  merra2_surface_flux_dailymeans_test.ipynb  merra2_surface_flux_hourly_test.ipynb  merra2_surface_flux_hourly_test_bug.ipynb  merra2_surface_flux_monthly_test.ipynb  temperature_test_dailymeans.csv  test_era5.py  test_merra2.py  wind_test_hourly.csv
tests/dev/: test_dummy.py  test_era5.py  test_merra2.py
tests/pr/: test_era5.py  test_era5_lengthy.py
(+39 files in other folders)
