[tool.poetry]
name = "geodata"
version = "0.1.0"
description = "Geospatial Data Collection and Pre-Analysis Tools"
authors = [
  "Michael Davidson <mrdavidson@ucsd.edu>",
  "William Honaker",
  "Xiqiang Liu <xil073@ucsd.edu>"
]
license = "GPLv3"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = ">=1.8.0"
scipy = ">=1.8.0"
pandas = ">=0.22"
Bottleneck = "^1.3.5"
numexpr = "^2.8.4"
xarray = ">=0.11.2"
netCDF4 = "^1.6.2"
dask = {version = ">=0.18.0", extras = ["complete"]}
boto3 = "^1.26.46"
toolz = "^0.12.0"
pyproj = "^3.4.1"
requests = "^2.28.1"
matplotlib = "^3.6.2"
rasterio = "^1.3.4"
rioxarray = "^0.14.0"
shapely = "^2.0.0"
progressbar2 = "^4.2.0"
geopandas = "^0.12.2"
cdsapi = {version = "^0.5.1", optional = true}
notebook = {version = "^6.5.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.0"

[tool.poetry.extras]
download = ["cdsapi"]
notebook = ["notebook"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
    [tool.pylint.master]
    fail-under = 9.0

    [tool.pylint.'DESIGN']
    # Maximum number of arguments for function / method
    max-args=116
    # Maximum number of attributes for a class (see R0902).
    max-attributes=15
    max-locals=27
    max-branches=35
    max-statements=75

    [tool.pylint.'ELIF']
    # Maximum number of nested blocks for function / method body
    max-nested-blocks=10

    [tool.pylint.'MESSAGES CONTROL']
        disable='''
            C0103,
            C0114,
            C0115,
            C0116,
            C0301
        '''
