[project]
name = "geodata"
description = "Geospatial Data Collection and Pre-Analysis Tools"
authors = [
  {name = "Michael Davidson", email = "mrdavidson@ucsd.edu"},
  {name = "William Honaker"},
  {name = "Xiqiang Liu", email = "xil073@ucsd.edu"}
]
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7,<3.11"
dependencies = [
    "numpy>=1.8.0",
    "scipy>=1.8.0",
    "pandas>=0.22", 
    "dask[complete]>=0.18.0",
    "pyproj>=3.4.0",
    "requests>=2.28.0",
    "shapely>=2.0.0",
    "geopandas>=0.12.0",
    "xarray>=0.11.2",
    "netCDF4>=1.6.0",
    "numba>=0.56.0",
    "matplotlib>=3.6.0",
    "rasterio>=1.3.0"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
download = ["cdsapi>=0.5.0"]
dev = ["black", "isort", "pytest", "pylint"]
docs = ["sphinx", "myst-parser"]

[tool.setuptools.dynamic]
version = {attr = "geodata._version.__version__"}
readme = {file = ["README.md"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint]
    [tool.pylint.master]
    fail-under = 9.0

    [tool.pylint.'DESIGN']
    # Maximum number of arguments for function / method
    max-args=116
    # Maximum number of attributes for a class (see R0902).
    max-attributes=15
    max-locals=27
    max-branches=35
    max-statements=75

    [tool.pylint.'ELIF']
    # Maximum number of nested blocks for function / method body
    max-nested-blocks=10

    [tool.pylint.'MESSAGES CONTROL']
        disable='''
            C0103,
            C0114,
            C0115,
            C0116,
            C0301
        '''
