[project]
name = "geodata-re"
version = "0.1.0"
description = "Geospatial Data Collection and Pre-Analysis Tools"
authors = [
    {name = "Michael Davidson", email = "mrdavidson@ucsd.edu"},
    {name = "Xiqiang Liu", email = "9440183+xiqiangliu@users.noreply.github.com"}
]
dependencies = [
    "numpy<2",
    "scipy>=1.8.0",
    "pandas>=2.2.3",
    "bottleneck>=1.3.6",
    "numexpr==2.10.1",
    "xarray>=2024.9.0",
    "netcdf4>=1.7.1.post2",
    "boto3==1.26.46",
    "toolz>=0.12.1",
    "pyproj==3.6.1",
    "requests>=2.32.3",
    "matplotlib==3.9.2",
    "rasterio==1.4.0",
    "rioxarray==0.14.0",
    "shapely>=2.0.6",
    "progressbar2>=4.5.0",
    "geopandas>=1.0.1",
    "pyyaml>=6.0.2",
    "dask>=2024.9.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLv3"}


[project.optional-dependencies]
download = [
    "cdsapi>=0.7.3",
]
notebook = [
    "notebook>=7.2.2",
]
docs = [
    "sphinx>=8.0.0",
    "myst-nb>=1.1.2",
    "sphinx-book-theme>=1.1.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.8",
    "pytest>=8.3.3",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["*.ipynb"]
